tests/baselines/reference/assignmentCompatWithCallSignatures2.errors.txt
assignmentCompatWithCallSignatures2.ts(9,5): error TS2454: Variable 'a' is used before being assigned.
assignmentCompatWithCallSignatures2.ts(17,5): error TS2454: Variable 's' is used before being assigned.
assignmentCompatWithCallSignatures2.ts(18,5): error TS2454: Variable 'a2' is used before being assigned.
assignmentCompatWithCallSignatures2.ts(19,5): error TS2454: Variable 's' is used before being assigned.
assignmentCompatWithCallSignatures2.ts(20,5): error TS2454: Variable 'a2' is used before being assigned.
assignmentCompatWithCallSignatures2.ts(31,1): error TS2322: Type '() => number' is not assignable to type 'T'.
assignmentCompatWithCallSignatures2.ts(32,1): error TS2322: Type '(x: number) => string' is not assignable to type 'T'.
assignmentCompatWithCallSignatures2.ts(33,1): error TS2322: Type '() => number' is not assignable to type '{ f(x: number): void; }'.
assignmentCompatWithCallSignatures2.ts(34,1): error TS2322: Type '(x: number) => string' is not assignable to type '{ f(x: number): void; }'.
assignmentCompatWithCallSignatures2.ts(42,1): error TS2322: Type 'S2' is not assignable to type 'T'.
  Types of property 'f' are incompatible.
    Type '(x: string) => void' is not assignable to type '(x: number) => void'.
      Types of parameters 'x' and 'x' are incompatible.
        Type 'number' is not assignable to type 'string'.
assignmentCompatWithCallSignatures2.ts(42,5): error TS2454: Variable 's2' is used before being assigned.
assignmentCompatWithCallSignatures2.ts(43,1): error TS2322: Type '{ f(x: string): void; }' is not assignable to type 'T'.
  Types of property 'f' are incompatible.
    Type '(x: string) => void' is not assignable to type '(x: number) => void'.
      Types of parameters 'x' and 'x' are incompatible.
        Type 'number' is not assignable to type 'string'.
assignmentCompatWithCallSignatures2.ts(43,5): error TS2454: Variable 'a3' is used before being assigned.
assignmentCompatWithCallSignatures2.ts(44,1): error TS2322: Type '(x: string) => number' is not assignable to type 'T'.
assignmentCompatWithCallSignatures2.ts(45,1): error TS2322: Type '(x: string) => string' is not assignable to type 'T'.
assignmentCompatWithCallSignatures2.ts(46,1): error TS2322: Type 'S2' is not assignable to type '{ f(x: number): void; }'.
  Types of property 'f' are incompatible.
    Type '(x: string) => void' is not assignable to type '(x: number) => void'.
      Types of parameters 'x' and 'x' are incompatible.
        Type 'number' is not assignable to type 'string'.
assignmentCompatWithCallSignatures2.ts(46,5): error TS2454: Variable 's2' is used before being assigned.
assignmentCompatWithCallSignatures2.ts(47,1): error TS2322: Type '{ f(x: string): void; }' is not assignable to type '{ f(x: number): void; }'.
  Types of property 'f' are incompatible.
    Type '(x: string) => void' is not assignable to type '(x: number) => void'.
      Types of parameters 'x' and 'x' are incompatible.
        Type 'number' is not assignable to type 'string'.
assignmentCompatWithCallSignatures2.ts(47,5): error TS2454: Variable 'a3' is used before being assigned.
assignmentCompatWithCallSignatures2.ts(48,1): error TS2322: Type '(x: string) => number' is not assignable to type '{ f(x: number): void; }'.
assignmentCompatWithCallSignatures2.ts(49,1): error TS2322: Type '(x: string) => string' is not assignable to type '{ f(x: number): void; }'.


==== assignmentCompatWithCallSignatures2.ts (21 errors) ====
    // void returning call signatures can be assigned a non-void returning call signature that otherwise matches
    
    interface T {
        f(x: number): void;
    }
    var t: T;
    var a: { f(x: number): void };
    
    t = a;
        ~
!!! error TS2454: Variable 'a' is used before being assigned.
    a = t;
    
    interface S {
        f(x: number): string;
    }
    var s: S;
    var a2: { f(x: number): string };
    t = s;
        ~
!!! error TS2454: Variable 's' is used before being assigned.
    t = a2;
        ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    a = s;
        ~
!!! error TS2454: Variable 's' is used before being assigned.
    a = a2;
        ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    
    t = { f: () => 1 };
    t = { f: <T>(x:T) => 1 };
    t = { f: function f() { return 1 } };
    t = { f(x: number) { return ''; } }
    a = { f: () => 1 }
    a = { f: <T>(x: T) => 1 };
    a = { f: function (x: number) { return ''; } }
    
    // errors
    t = () => 1;
    ~
!!! error TS2322: Type '() => number' is not assignable to type 'T'.
    t = function (x: number) { return ''; }
    ~
!!! error TS2322: Type '(x: number) => string' is not assignable to type 'T'.
    a = () => 1;
    ~
!!! error TS2322: Type '() => number' is not assignable to type '{ f(x: number): void; }'.
    a = function (x: number) { return ''; }
    ~
!!! error TS2322: Type '(x: number) => string' is not assignable to type '{ f(x: number): void; }'.
    
    interface S2 {
        f(x: string): void;
    }
    var s2: S2;
    var a3: { f(x: string): void };
    // these are errors
    t = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type 'T'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: string) => void' is not assignable to type '(x: number) => void'.
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:         Type 'number' is not assignable to type 'string'.
        ~~
!!! error TS2454: Variable 's2' is used before being assigned.
    t = a3;
    ~
!!! error TS2322: Type '{ f(x: string): void; }' is not assignable to type 'T'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: string) => void' is not assignable to type '(x: number) => void'.
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:         Type 'number' is not assignable to type 'string'.
        ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    t = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: string) => number' is not assignable to type 'T'.
    t = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: string) => string' is not assignable to type 'T'.
    a = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type '{ f(x: number): void; }'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: string) => void' is not assignable to type '(x: number) => void'.
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:         Type 'number' is not assignable to type 'string'.
        ~~
!!! error TS2454: Variable 's2' is used before being assigned.
    a = a3;
    ~
!!! error TS2322: Type '{ f(x: string): void; }' is not assignable to type '{ f(x: number): void; }'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: string) => void' is not assignable to type '(x: number) => void'.
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:         Type 'number' is not assignable to type 'string'.
        ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    a = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: string) => number' is not assignable to type '{ f(x: number): void; }'.
    a = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: string) => string' is not assignable to type '{ f(x: number): void; }'.
    